# omni2-bridge

./: .env.example  .gitattributes  .gitignore  ACTIVITY_TRACKING_IMPLEMENTATION.md  ADMIN_NAV_UPDATE.md  CHANGELOG.md  CONVERSATION_ANALYTICS_IMPLEMENTATION.md  DASHBOARD_FLOW_IMPLEMENTATION.md  DEMO.md  DEV_FEATURES.md  Dockerfile  ENDPOINT_TRACE_CORRECTIONS.md  ENDPOINT_UNUSED_AUDIT.md  FLOW_HISTORY_ENHANCEMENT_INVESTIGATION.md  FLOW_HISTORY_UI_ENHANCEMENT_COMPLETE.md  FLOW_LOGGING_GUIDE.md  FLOW_TESTING_GUIDE.md  FLOW_TRACKER_AND_WEBSOCKET_FIXES.md  INSTANT_USER_BLOCKING_IMPLEMENTATION.md  INVESTIGATION_DATABASE_LOGS_AND_USAGE.md  INVESTIGATION_SUMMARY_FEB12.md  LIVE_UPDATES_IMPLEMENTATION.md  MCP_GATEWAY_STEP1.md  MCP_LOGS_AND_METRICS_ADVICE.md  MCP_MONITORING_COMPLETE_ANALYSIS.md  MCP_PT_COMPLETE.md  OMNI_RULES.md  OUTSTANDING_DASHBOARD_ISSUES.md  PHASE1_CHAT_PLAN.md  PHASE1_COMPLETE.md  PHASE1_ISSUES.md  PHASE2_FIXES.md  PHASE2_FLOW_TRACKING.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE2_QUICK_REF.md  PHASE2_SUMMARY.md  PROMPT_GUARD_COMPLETE.md  RBAC_QUICK_GUIDE.md  RBAC_SYSTEM.md  README.md  (+56 more)
.amazonq/rules/: omni-architecture.md
_layouts/: default.html
app/: config.py  database.py  main.py  models.py
app/routers/: audit.py  chat.py  circuit_breaker.py  events.py  flow_websocket.py  iam_chat_config.py  mcp_gateway.py  mcp_gateway_v2.py  mcp_pt_admin.py  mcp_servers.py  monitoring.py  prompt_guard_admin.py  tools.py  websocket.py  websocket_chat.py  websocket_chat_old.py
app/services/: activity_tracker.py  audit_service.py  auth_client.py  chat_context_service.py  circuit_breaker.py  event_registry.py  flow_tracker.py  llm_service.py  mcp_client.py  mcp_coordinator.py  mcp_gateway_fastmcp.py  mcp_gateway_session_cache.py  mcp_permission_service.py  mcp_registry.py  prompt_guard_client.py  prompt_guard_config_cache.py  redis_listener_base.py  subscription_manager.py  system_events_listener.py  tool_cache.py  usage_limit_service.py  user_service.py  websocket_broadcaster.py  ws_connection_manager.py
app/utils/: logger.py  permission_checker.py
auth_service/: 401_ERRORS_EXPLAINED.md  CHANGES_SUMMARY.md  ERRORS_FIXED.md  README_401.md  check_status.py  diagnose_401.py  docker-compose.yml  main.py
auth_service/config/: settings.py
auth_service/routes/: auth.py  mcp_tokens.py  roles.py  users.py
auth_service/services/: token_service.py
config/: admin.yaml  mcps.yaml  settings.yaml  users.yaml
dashboard/: IAM.md  IAM_PLAN.md  MCP_AUTH_UI_IMPROVEMENTS.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_STATUS_SYSTEM_EXPLAINED.md  PERMISSION_BUILDER_MOCKUP.md  PERMISSION_BUILDER_SUMMARY.md  PERMISSION_BUILDER_UX.md  PHASE1_COMPLETE.md  PRODUCTION_CONFIG.md  QUICK_FIX_GUIDE.md  README.md  ROLES_IMPLEMENTATION.md  WEBSOCKET_ARCHITECTURE.md  WEBSOCKET_COMPLETE_GUIDE.md  WEBSOCKET_UI_IMPROVEMENTS.md  docker-compose.yml  restart_frontend.bat  verify.bat
dashboard/backend/: Dockerfile  init_dashboard.py  pyproject.toml  test_websocket.html
dashboard/backend/app/: config.py  database.py  main.py
dashboard/backend/app/routers/: activities.py  charts.py  chat.py  config.py  dashboard.py  events.py  flows.py  iam.py  mcp.py  mcp_analytics.py  mcp_pt_proxy.py  monitoring_proxy.py  prompt_guard_proxy.py  security.py  websocket.py
dashboard/backend/app/schemas/: dashboard_models.py
dashboard/backend/app/services/: flow_listener.py
dashboard/frontend/: Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.ts
dashboard/frontend/src/: middleware.ts  proxy.ts
dashboard/frontend/src/app/: globals.css  layout.tsx  page.tsx
dashboard/frontend/src/components/: AIRedTeamResults.tsx  ChatBox.tsx  ChatWidget.tsx  ChatWidgetWrapper.tsx  ConversationFlowGraph.tsx  DevFeatures.tsx  FlowTracker.tsx  GlobalNotificationProvider.tsx  GraphConfigPanel.tsx  MCPPTAboutTab.tsx  MCPPTDashboardV2.tsx  MCPPTInfoPanel.tsx  MCPPTScanner.tsx  MainNav.tsx  MonitoringConfig.tsx  MultiUserFlowTracker.tsx  PTRunDetails.tsx  PromptGuardSettings.tsx  SecurityProfile.tsx  UserDetailsModal.tsx  WebSocketDebugWindow.tsx
dashboard/frontend/src/stores/: authStore.ts  graphConfigStore.ts  notificationStore.ts
dashboard/progress/: PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md
dashboard/tests/: test_users.bat
docs/: CIRCUIT_BREAKER_IMPLEMENTATION.md  CIRCUIT_BREAKER_QUICK_REFERENCE.md  DOCUMENTATION_UPDATE_2026-01-26.md  IAM_ARCHITECTURE.md  PHASE1_PROGRESS.md  PHASE2_PROGRESS.md  PHASE_1_IMPLEMENTATION_COMPLETE.md  README.md  ROBUST_MCP_ARCHITECTURE.md  UI_IMPROVEMENT_PLAN.md  USERS_TAB_QUICK_REF.md  USERS_TAB_SPEC.md  WEBSOCKET_ANALYSIS.md  WEBSOCKET_SECURITY_ANALYSIS.md
docs/architecture/: TRAEFIK_ARCHITECTURE.md
docs/mcp-integration/: MCP.md
docs/security/: AUTHENTICATION.md  AUTHORIZATION.md  NETWORK_SECURITY.md  SECURITY_OVERVIEW.md
mcp-pt-service/: .env.example  .gitignore  1.0.0  ARCHITECTURE_V2.md  Dockerfile  ENDPOINT_FLOW_MAP.md  IMPLEMENTATION.md  IMPLEMENTATION_PHASE1.md  IMPROVEMENTS_SUMMARY.md  LLM_ANALYSIS_PLAN.md  LLM_TEST_APPLICATION.md  MCP_DISCOVERY_FINDINGS.md  PROGRESS.md  README.md  RULES.md  SECURITY_PROFILE_IMPLEMENTATION.md  TEST_CATEGORIES_COMPLETE.md  agent_executor.py  check_init.py  config.py  config_service.py  db.py  design.md  docker-compose.yml  executor.py  llm_client.py  logger.py  main.py  mcp_client.py  mcp_discovery.py  phrase_registry.py  planner.py  pyproject.toml  recon.py  redis_handler.py  redis_publisher.py  requirements.txt  results.json  scanner.py  start.bat
mcp-pt-service/routers/: __init__.py  pt_config.py  pt_runs.py
migrations/: 002_audit_logs_enhancement.sql  004_user_usage_limits.sql  init.sql  seed.sql
prompt-guard-service/: .env.example  .gitignore  DEPLOYMENT_COMPLETE.md  Dockerfile  FINAL_IMPLEMENTATION.md  IMPLEMENTATION.md  IMPROVED_INTEGRATION.md  MANUAL_BLOCKING_FLOW.md  README.md  SETUP.md  TESTING_GUIDE.md  config.py  db.py  docker-compose.yml  guard.py  logger.py  main.py  pyproject.toml  redis_handler.py
scripts/: init_schema.py
traefik-external/: README.md  docker-compose.yml
(+53 files in other folders)
