[project]
name = "prompt-guard-service"
version = "1.0.0"
description = "Prompt injection detection service using Llama-Prompt-Guard-2-86M"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.23",
    "structlog>=23.2.0",
    "orjson>=3.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
